<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mxmachine_state"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:focusable="false"
            android:text="@string/show_status"
            android:textColor="#0000ff"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/mxAccTimes"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:focusable="false"
            android:text="@string/show_acc"
            android:textColor="#0000ff"
            android:textStyle="bold" >
        </Button>

        <Button
            android:id="@+id/mxCurrentT"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:focusable="false"
            android:text="@string/show_tmp"
            android:textColor="#0000ff"
            android:textStyle="bold" >
        </Button>
    </LinearLayout>

    <ListView
        android:id="@+id/mxlistview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:divider="@drawable/them"
        android:drawSelectorOnTop="false" />

</LinearLayout>