<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/lo_iv_osd"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher" />

    <DigitalClock
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#0066CC"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:text="@string/xm_clock_format"
        android:textColor="#0000ff"
        android:textStyle="bold" >
    </DigitalClock>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xm_osd_dia_path" />

        <EditText
            android:id="@+id/xmedosd_path"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="文件夹的绝对路径"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xm_osd_dia_color" />

        <EditText
            android:id="@+id/xmedosd_color"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="如RGB:220022" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xmedosd_text_color" />

        <EditText
            android:id="@+id/xmedosd_text_color"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="如RGB:993366" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xm_osd_dia_size" />

        <SeekBar
            android:id="@+id/xmsbosd_size"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_weight="2"
            android:max="120"
            android:progress="15" />
    </LinearLayout>

</LinearLayout>