<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="10"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/xmsvshell"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/xmtvshell"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="false"
            android:ellipsize="end"
            android:singleLine="false"
            android:text="@string/xmshell_warn"
            android:textSize="11sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="9"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/xmedshellcmd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:completionThreshold="1"
            android:gravity="left"
            android:hint="请在此输入shell指令"
            android:imeOptions="flagNoExtractUi" />

        <Button
            android:id="@+id/xmbtsave"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:focusable="false"
            android:text="@string/shell_save"
            android:textColor="#0000ff" >
        </Button>

        <Button
            android:id="@+id/xmbtclear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:focusable="false"
            android:text="@string/shell_clear"
            android:textColor="#0000ff" >
        </Button>
    </LinearLayout>

</LinearLayout>