<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/lo_iv_watcher"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_gravity="center_vertical"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher" />

    <DigitalClock
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="#0066CC"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:text="@string/xm_clock_format"
        android:textColor="#0000ff"
        android:textStyle="bold" >
    </DigitalClock>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xmstr_wt_ct" />

        <EditText
            android:id="@+id/xmedwt_cputmp"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="CPU温度高于:"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xmstr_wt_phonenum" />

        <EditText
            android:id="@+id/xmedwt_phonenum"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="手机号码:"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#330022"
            android:gravity="center_vertical"
            android:text="@string/xmstr_wt_limitsmscount" />

        <EditText
            android:id="@+id/xmedwt_allcount"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:hint="限制watcher总短信次数:"
            android:numeric="integer" />
    </LinearLayout>

</LinearLayout>